samples/_failures_safe/1761403147_2ca2b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_661a7a22.c: In function ‘main’:
./samples/SAFE/__tmp_661a7a22.c:171:5: error: expected expression at end of input
  171 |     if (len > 0 && buffer[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_661a7a22.c:171:5: error: expected declaration or statement at end of input
